Address sonar qube warnings